--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^4.12.3",
     "morgan": "~1.9.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
