--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "google-books-search": "^0.3.1",
     "mongoose": "^4.12.3",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
