--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test" : "mocha"
+    "test" : "mocha --slow 0"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
